--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,18 @@ body {
     position: relative;
     background-color: rgb(238, 238, 238);
     color: rgb(28, 28, 28);
-    line-height: 1.5;
+    line-height: 1.6;
     font-family: Consolas, Monaco, monospace;
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+main {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 15px 0;
+    flex: 1;
 }
 a {
     color: rgba(30, 8, 227, 0.631);
@@ -34,11 +43,18 @@ a:hover {
     font-size: 1.5em;
 }
 footer {
-    bottom: 0;
-    position: relative;
-    margin-top: 25px;
-    padding-bottom: 10px;
+    margin: 0 auto;
+    max-width: 800px;
+    padding-bottom: 1em;
+    text-align: left;  
+    width: 100%;
 }
+footer small {
+    display: block;
+    text-align: left;
+    padding-left: 0;
+}
+
 
 @media (prefers-color-scheme: dark) {
     body {
