--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ a {
 a:hover {
     background-color: lightyellow;
     border-radius: 4px;
-    padding: 0 5px;
+    /* padding: 0 5px; */
 }
 .cmd {
     color: rgba(15, 15, 15, 0.5);
